# redneckracer

./: .gitignore  .project  AndroidManifest.xml  README.graphics  android_notes.txt  build.properties  build.xml  cars.sh  cppcheck-suppressions  cpplint.sh  dan-local.properties  dev-release.keystore  generate_atlases.sh  hardware.txt  mkatlas.pl  prepare_graphics.sh  resize_assets.sh  resize_fonts.sh
cocos2dx/support/zip_support/: ioapi.cpp
docs/: defines.android.crystax.arm.c++.txt  defines.android.crystax.arm.c.txt  defines.android.native.arm.c++.txt  defines.linux.native.i386.c++.txt  defines.linux.native.i386.c.txt  defines.linux.native.x86_64.c++.txt  defines.linux.native.x86_64.c.txt  defines.osx.native.i386.c++.txt  defines.osx.native.i386.c.txt  defines.osx.native.ppc.c++.txt  defines.osx.native.ppc.c.txt  probe_tools.sh
graphics/ginormous/: add_names_to_resize_data.sh  precision_percentages.txt
graphics/ginormous/Animals/Armadillo/: resize.data
graphics/ginormous/Animals/Possum/: resize.data
graphics/ginormous/Animals/Raccoon/: resize.data
graphics/ginormous/Animals/Snake/: resize.data
graphics/ginormous/Fonts/: TheMilkmanConspiracy.atlas  font.resize.data
graphics/ginormous/Menus/: resize_master
graphics/ginormous/Police/: resize.data
graphics/ginormous/Tracks/: resize.data
graphics/ginormous/icons/: Laucher_Icon_Muddy_Tire.psd
jni/: .gitignore  .project  .render.c.swp  Android.mk  Application.mk  Makefile.am  acinclude.m4  bootstrap.sh  configure.ac
jni/CppUnit/: AutoTest.cpp  AutoTest.hpp  CppUnitException.cpp  CppUnitException.hpp  Guards.hpp  Makefile.am  Test.hpp  TestCaller.hpp  TestCase.cpp  TestCase.hpp  TestFailure.cpp  TestFailure.hpp  TestResult.cpp  TestResult.hpp  TestRunner.cpp  TestRunner.hpp  TestSuite.cpp  TestSuite.hpp  TextTestResult.cpp  TextTestResult.hpp
jni/engine/: AccelerateAction.cpp  AccelerateAction.hpp  Action.hpp  AndroidKeyboardInput.cpp  AndroidKeyboardInput.hpp  Animation.cpp  Animation.hpp  Boundable.cpp  Boundable.hpp  Collidable.hpp  Collider.cpp  Collider.hpp  Director.cpp  Director.hpp  Drawable.cpp  Drawable.hpp  DrawableLine.cpp  DrawableLine.hpp  DrawableRectangle.cpp  DrawableRectangle.hpp  EngineConfig.hpp  EngineFwd.hpp  FollowAction.cpp  FollowAction.hpp  GL.cpp  GL.hpp  GLMock.cpp  GLMock.hpp  Label.cpp  Label.hpp  Layer.hpp  Log.hpp  Makefile.am  Menu.cpp  Menu.hpp  MenuItem.cpp  MenuItem.hpp  Mesh.cpp  Mesh.hpp  MoveAction.cpp  (+38 more)
jni/game/: .gitignore  Animal.cpp  Animal.hpp  BestTimes.cpp  BestTimes.hpp  CivilCar.cpp  CivilCar.hpp  Destroyer.cpp  Destroyer.hpp  DrivingAI.cpp  DrivingAI.hpp  ErrorHandler.cpp  ErrorHandler.hpp  FPSAction.cpp  FPSAction.hpp  GameLibrary.cpp  GameLibrary.hpp  GarageScene.cpp  GarageScene.hpp  Globals.cpp  Globals.hpp  LoadingScreenScene.cpp  LoadingScreenScene.hpp  MainMenuScene.cpp  MainMenuScene.hpp  Makefile.am  Obstacle.cpp  Obstacle.hpp  OpponentAI.cpp  OpponentAI.hpp  OpponentTruck.cpp  OpponentTruck.hpp  OptionsScene.cpp  OptionsScene.hpp  PlayerTruck.cpp  PlayerTruck.hpp  PoliceAI.cpp  PoliceAI.hpp  RRConfig.hpp  RRFwd.hpp  (+26 more)
jni/game/eglut/: eglut.h
jni/graphlib/: .gitignore  AlphaImage.hpp  BaseClass.cpp  BaseClass.hpp  Bounding2d.cpp  Bounding2d.hpp  BoundingGrid2d.cpp  BoundingGrid2d.hpp  Capabilities.cpp  Capabilities.hpp  Cloneable.cpp  Cloneable.hpp  CommonFwd.hpp  FTFont.cpp  FTFont.hpp  FrameBuffer.hpp  Fuzzy.hpp  GenericCoord2.hpp  GenericCoord3.hpp  GenericFrame.hpp  GenericInterval.hpp  GenericLine.hpp  GenericONB.hpp  GenericPoint2.hpp  GenericPoint3.hpp  GenericRGBAColor.hpp  GenericRGBColor.hpp  GenericRectangle.hpp  GenericSize2.hpp  GenericVector2.hpp  GenericVector3.hpp  Image.hpp  InputWindow.hpp  Intersectable2d.cpp  Intersectable2d.hpp  KeyboardInput.cpp  KeyboardInput.hpp  Makefile.am  MaskedImage.hpp  MouseInput.cpp  (+17 more)
jni/libpng/: Makefile.am
jni/libzip/: Makefile.am  zip_close.c  zip_dirent.c
jni/miniblocxx/: Array.cpp  Array.hpp  ArrayEnumerator.hpp  ArrayFwd.hpp  ArrayImpl.hpp  Assertion.cpp  Assertion.hpp  AtomicOps.cpp  AtomicOps.hpp  AutoPtr.hpp  AutoResource.hpp  BLOCXX_android_config.h  BLOCXX_config.h  BLOCXX_osx_iOS_config.h  BLOCXX_osx_x64_config.h  BLOCXX_windows_config.h  BaseStreamBuffer.cpp  BaseStreamBuffer.hpp  BinarySerialization.cpp  BinarySerialization.hpp  Bool.cpp  Bool.hpp  ByteSwap.hpp  COWIntrusiveCountableBase.cpp  COWIntrusiveCountableBase.hpp  COWIntrusiveReference.hpp  COWReference.hpp  COWReferenceBase.hpp  CerrAppender.hpp  Char16.cpp  Char16.hpp  CommonFwd.hpp  DateTime.cpp  DateTime.hpp  DelayedFormat.cpp  DelayedFormat.hpp  Demangle.cpp  Demangle.hpp  DivRem.hpp  Enumerator.hpp  (+83 more)
jni/miniblocxx/stl/: algorithm  algorithm.hpp  float.hpp  iterator.hpp  limits  limits.hpp  pair.hpp  utility  vector  vector.hpp
jni/openal/: Makefile.am
jni/openal/Alc/: ALc.c
jni/openal/OpenAL32/: alBuffer.c
jni/openal/android/: build.properties  build.xml
jni/openal/android/jni/: Android.mk  config.h
jni/openal/include/: config.h
jni/test/: .gitignore  AccelerateActionTests.cpp  AndroidKeyboardInputTests.cpp  AnimationTests.cpp  BoundableTests.cpp  Bounding2dTests.cpp  ColliderTests.cpp  DrawableTests.cpp  EnumeratorTests.cpp  KeyboardInputTests.cpp  LabelTests.cpp  Makefile.am  MockGLMock.h  MoveActionTests.cpp  ProgressBarTests.cpp  RotateActionTests.cpp  SceneTests.cpp  ShotGunTests.cpp  SpriteTests.cpp  TouchButtonTests.cpp
jni/test/gmock/: Makefile.am
res/layout/: main.xml
res/values/: strings.xml
sounds/animal_thud/: roadkill_hit.aup
sounds/outhouse_collision/: Crash wood smash break_BLASTWAVEFX_21555.aup
sounds/police_radio/: cops_coming.aup
sounds/rage/: Celebration_Wahoo01.aup  Celebration_Wahoo02.aup  Celebration_Wahoo03.aup  Celebration_Yeehah01.aup  Celebration_Yeehah02.aup  Taunt_LaterAlligator.aup
sounds/shotgun/: GunPing.aup  Shotgun.aup
sounds/tractor_collision/: tractor_crash.aup
sounds/tree_bush/: hit_bush.aup  hit_tree.aup
sounds/truck_collision/: auto_crash.aup
sounds/truck_start/: crappertruck_rev_go.aup  crappertruck_startup.aup
(+139 files in other folders)
