lib_LTLIBRARIES = libengine.la

INCLUDES = -I@top_srcdir@ -I@top_srcdir@/boost

libengine_la_LDFLAGS = -shared -rpath @prefix@/lib

libengine_la_SOURCES = \
	AccelerateAction.cpp \
	AndroidKeyboardInput.cpp \
	Animation.cpp \
	Boundable.cpp \
	Collider.cpp \
	Director.cpp \
	Drawable.cpp \
	DrawableRectangle.cpp \
	FollowAction.cpp \
	GL.cpp \
	GLMock.cpp \
	Label.cpp \
	Menu.cpp \
	MenuItem.cpp \
	Mesh.cpp \
	MoveAction.cpp \
	ProgressBar.cpp \
	Resource.cpp \
	Resources.cpp \
	RotateAction.cpp \
	Scene.cpp \
	Sound.cpp \
	SoundDevice.cpp \
	Sprite.cpp \
	Texture.cpp \
	TexturedFont.cpp \
	TexturedQuad.cpp \
	TextureLibrary.cpp \
	TextureLoader.cpp \
	TouchButton.cpp
