lib_LTLIBRARIES = libminiblocxx.la
libminiblocxx_la_LDFLAGS = -shared -rpath @prefix@/lib
libminiblocxx_la_SOURCES = \
Array.cpp \
Assertion.cpp \
AtomicOps.cpp \
BaseStreamBuffer.cpp \
BinarySerialization.cpp \
Bool.cpp \
Char16.cpp \
COWIntrusiveCountableBase.cpp \
DateTime.cpp \
DelayedFormat.cpp \
Demangle.cpp \
Exception.cpp \
Format.cpp \
IntrusiveCountableBase.cpp \
IOException.cpp \
Mutex.cpp \
MutexImpl.cpp \
OutOfBoundsException.cpp \
ReferenceHelpers.cpp \
String.cpp \
StringBuffer.cpp \
StringConversionImpl.cpp \
StringStream.cpp \
ThreadOnce.cpp \
TimeConstants.cpp \
TimeDuration.cpp \
TimePeriod.cpp \
TmUtils.cpp \
UTF8Utils.cpp \
UTF8UtilscompareToIgnoreCase.cpp \
XMLEscape.cpp \
XMLNode.cpp \
XMLParserCore.cpp \
XMLParserDOM.cpp \
XMLParserError.cpp \
XMLParserSAX.cpp \
XMLUnescape.cpp
