noinst_PROGRAMS = \
AccelerateActionTests \
AndroidKeyboardInputTests \
AnimationTests \
BoundableTests \
Bounding2dTests \
ColliderTests \
DrawableTests \
EnumeratorTests \
KeyboardInputTests \
LabelTests \
MoveActionTests \
ProgressBarTests \
RotateActionTests \
SceneTests \
ShotGunTests \
SpriteTests \
TouchButtonTests

AccelerateActionTests_SOURCES = \
AccelerateActionTests.cpp

AndroidKeyboardInputTests_SOURCES = \
AndroidKeyboardInputTests.cpp

AnimationTests_SOURCES = \
AnimationTests.cpp

BoundableTests_SOURCES = \
BoundableTests.cpp

Bounding2dTests_SOURCES = \
Bounding2dTests.cpp

ColliderTests_SOURCES = \
ColliderTests.cpp

DrawableTests_SOURCES = \
DrawableTests.cpp

EnumeratorTests_SOURCES = \
EnumeratorTests.cpp

KeyboardInputTests_SOURCES = \
KeyboardInputTests.cpp

LabelTests_SOURCES = \
LabelTests.cpp

MoveActionTests_SOURCES = \
MoveActionTests.cpp

ProgressBarTests_SOURCES = \
ProgressBarTests.cpp

RotateActionTests_SOURCES = \
RotateActionTests.cpp

SceneTests_SOURCES = \
SceneTests.cpp

ShotGunTests_SOURCES = \
ShotGunTests.cpp

SpriteTests_SOURCES = \
SpriteTests.cpp

TouchButtonTests_SOURCES = \
TouchButtonTests.cpp

SUBDIRS = gmock

INCLUDES = -I$(top_srcdir) \
-I$(top_srcdir)/CppUnit \
-I$(top_builddir) \
-I gmock/gtest/include \
-I gmock/include

LIBS += ../CppUnit/libCppUnit.la \
../libzip/libzip.la \
../miniblocxx/libminiblocxx.la \
../graphlib/libgraph.la \
../engine/libengine.la \
../game/libgame.la \
gmock/libgmock.la \
-framework OpenAL

TESTS = \
AccelerateActionTests \
AndroidKeyboardInputTests \
AnimationTests \
BoundableTests \
Bounding2dTests \
ColliderTests \
DrawableTests \
EnumeratorTests \
KeyboardInputTests \
LabelTests \
MoveActionTests \
ProgressBarTests \
RotateActionTests \
SceneTests \
ShotGunTests \
SpriteTests \
TouchButtonTests
